Schema bump to 21.000 (#279)